# GrafenBot

./: .gitignore  docker-compose.yml  pyproject.toml
docker-build/: Dockerfile
project/: Dockerfile  requirements.txt
project/apps/management/: apps.py
project/apps/management/management/commands/: run_bot.py
project/apps/sender/: apps.py  models.py
project/apps/sender/bot/: main_bot.py  sender.py  sender_data.py
project/apps/sender/bot/filters/: admin.py
project/apps/sender/migrations/: 0001_initial.py
project/apps/sender/misc/: const.py  sheet.py
project/core/: asgi.py  urls.py  wsgi.py
project/core/settings/: __init__.py  default.py  other.py
src/: .env.template  alembic.ini  run_bot.py
src/alembic/versions/: 2025_08_29_1020-85b58185e86c_init.py  2025_08_29_1313-674948b59d39_add_class_num.py  2025_11_25_1107-eed112596dc8_init.py
src/apps/sender/: google_client.py  sender.py
src/apps/sender/bot/: main_bot.py  sender.py  sender_data.py  sent_msg.py
src/apps/sender/bot/handlers/: __init__.py  main.py
src/apps/sender/bot/services/: delete_msg.py
src/apps/sender/misc/: const.py
src/core/: config.py  sync_gd.py
src/core/database/DAL/: classes_CRUD.py  family_CRUD.py  schedules_CRUD.py
src/core/database/models/: __init__.py  base.py  classes.py  family.py  schedules.py
src/core/database/schemas/: __init__.py  class.py  classes.py  families.py  family.py  schedule.py
src/core/db/: db.py  models.py
src/core/services/: __init__.py  class_service.py  family_service.py  schedule_service.py
(+5 files in other folders)
