[project]
name = "grafenbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolai Lavrov",email = "mail@nlavrov.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
