[tool.poetry]
name = "grafenbot"
version = "0.1.0"
description = ""
authors = ["lnv <mail@nlavrov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = ">=2.11.7"
pydantic-settings = "^2.11.0"
aiogram = "^3.22.0"
gspread = ">=6.2.1"
schedule = ">=1.2.2"
pytz = "^2025.2"
black = "^25.9.0"
alembic = "^1.16.5"
sqlalchemy = "^2.0.43"
aiosqlite = ">=0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
